Add sample ivan

--- a/webformassistenza/src/main/resources/content/Language.properties
+++ b/webformassistenza/src/main/resources/content/Language.properties
@@ -145,7 +145,10 @@ captcha.num.7=sette
 captcha.num.8=otto
 captcha.num.9=nove
 
+#new tabs configurazioni
 
+noipawebformassistenza.config.csv.1=Csv 1
+noipawebformassistenza.config.csv.2=Csv 2
 
 
 
