Mod config portlet Webform

--- a/webformassistenza/src/main/resources/content/Language.properties
+++ b/webformassistenza/src/main/resources/content/Language.properties
@@ -147,8 +147,8 @@ captcha.num.9=nove
 
 #new tabs configurazioni
 
-noipawebformassistenza.config.csv.1=Csv 1
-noipawebformassistenza.config.csv.2=Csv 2
+noipawebformassistenza.config.csv.amministrazioni=Amministrazioni
+noipawebformassistenza.config.csv.tipologie=Tipologie
 
 
 
