Mod webform new

--- a/webformassistenza/src/main/resources/content/Language.properties
+++ b/webformassistenza/src/main/resources/content/Language.properties
@@ -50,7 +50,6 @@ noipawebformassistenza.dati.nota.obb=I campi contrassegnati con (*) sono obbliga
 noipawebformassistenza.dati.desc=Descrizione
 noipawebformassistenza.dati.desc.info=Se la richiesta di assistenza viene formulata da un operatore per un soggetto diverso, &egrave; necessario indicare in questo campo anche il Nome, Cognome e Codice Fiscale del dipendente a cui si riferisce la richiesta 
 noipawebformassistenza.dati.nota.concl=Per alcuni tipi di richiesta, &egrave; possibile contattare il numero verde 800 991 990 disponibile dal Luned&igrave; al Venerd&igrave;, dalle 8.00 alle 18.00. Il numero verde &egrave; raggiungibile esclusivamente da rete fissa. E\u2019 possibile verificare i tipi di richiesta gestiti attraverso il numero verde, al seguente link: 
-noipawebformassistenza.dati.supporto=Modulo di contatto
 noipawebformassistenza.dati.nota.concl.link=<a class="textDecoration" href="{0}" target="_blank">Flusso gestione richieste</a>.
 noipawebformassistenza.dati.desc.nota1=Per  assegnare correttamente la richiesta di assistenza al gruppo competente per materia ti invitiamo a riempire il modulo di richiesta  esponendo il problema in maniera chiara e dettagliata.
 noipawebformassistenza.dati.nota.finale=I dati personali contenuti nella presente scheda saranno utilizzati esclusivamente per le finalit&agrave; dichiarate e nei termini previsti nell'informativa fornita ai sensi dell'art.13 del Regolamento UE 679/2016. Per maggiori informazioni &egrave; possibile utilizzare il seguente
@@ -151,4 +150,22 @@ noipawebformassistenza.config.csv.amministrazioni=Amministrazioni
 noipawebformassistenza.config.csv.tipologie=Tipologie
 
 
+# Nuevelabels da tradurre
+noipawebformassistenza.label.link.amministrato=Amministrato
+noipawebformassistenza.label.link.amministrato.aria.label=Vai al modulo di contatto per Amministrato
+noipawebformassistenza.label.link.mvp=Modulo Valutazione e Performance
+noipawebformassistenza.label.link.mvp.aria.label=Vai al modulo di contatto per Modulo Valutazioni e Performance
+noipawebformassistenza.label.link.enteCreditore=Ente creditore
+noipawebformassistenza.label.link.enteCreditore.aria.label=Vai al modulo di contatto per Ente creditore
+noipawebformassistenza.label.link.percettorePensione=Percettore di pensione
+noipawebformassistenza.label.link.percettorePensione.aria.label=Vai al modulo di contatto per Percettore di pensione
 
+noipawebformassistenza.dati.supporto=Modulo di contatto
+noipawebformassistenza.dati.supporto.Amministrato=Amministrato - Modulo di contatto
+noipawebformassistenza.dati.supporto.MVP=Valutazione e Performance - Modulo di contatto
+noipawebformassistenza.dati.supporto.EntiCreditori=Ente creditore - Modulo di contatto
+noipawebformassistenza.dati.supporto.AreaPensioni=Percettore di pensione - Modulo di contatto
+noipawebformassistenza.dati.denominazione=Denominazione
+noipawebformassistenza.dati.ragSociale=Rag. Sociale
+noipawebformassistenza.dati.piva= CF/P.IVA
+noipawebformassistenza.dati.piva.error=Il CF/P.IVA inserito risulta non formalmente corretto
