--- a/webformassistenza/src/main/resources/content/Language.properties
+++ b/webformassistenza/src/main/resources/content/Language.properties
@@ -169,3 +169,7 @@ noipawebformassistenza.dati.denominazione=Denominazione
 noipawebformassistenza.dati.ragSociale=Rag. Sociale
 noipawebformassistenza.dati.piva= CF/P.IVA
 noipawebformassistenza.dati.piva.error=Il CF/P.IVA inserito risulta non formalmente corretto
+
+
+noipawebformassistenza.dati.nota.finale.documento=I dati personali contenuti nella presente scheda saranno utilizzati esclusivamente per le finalit&agrave; dichiarate e nei termini previsti nell'informativa fornita ai sensi dell'art.13 del Regolamento UE 679/2016. Per maggiori informazioni &egrave; possibile utilizzare il seguente link:
+noipawebformassistenza.dati.nota.finale.documento.link=<a aria-label="Scarica il documento - File docx 52 kb" title="Scarica il documento" class="textDecoration" href="{0}" target="_blank">Informativa Privacy</a>.
