Add portlet webContent

--- a/webformassistenza/src/main/resources/content/Language.properties
+++ b/webformassistenza/src/main/resources/content/Language.properties
@@ -171,5 +171,5 @@ noipawebformassistenza.dati.piva= CF/P.IVA
 noipawebformassistenza.dati.piva.error=Il CF/P.IVA inserito risulta non formalmente corretto
 
 
-noipawebformassistenza.dati.nota.finale.documento=I dati personali contenuti nella presente scheda saranno utilizzati esclusivamente per le finalit&agrave; dichiarate e nei termini previsti nell'informativa fornita ai sensi dell'art.13 del Regolamento UE 679/2016. Per maggiori informazioni &egrave; possibile utilizzare il seguente link:
+noipawebformassistenza.dati.nota.finale.documento=I dati personali da Lei inviati attraverso il presente modulo di contatto saranno utilizzati per permetterci l\u2019elaborazione di una risposta alla Sua richiesta, per fornirLe il supporto necessario sui servizi erogati dal sistema NoiPA e, in forma aggregata, per misurare la qualit&agrave; del servizio offerto. Per maggiori informazioni si prega di voler prendere visione dell\u2019informativa fornita ai sensi dell\u2019Art. 13 del Regolamento Europeo 2016/679 al link:
 noipawebformassistenza.dati.nota.finale.documento.link=<a aria-label="Scarica il documento - File docx 52 kb" title="Scarica il documento" class="textDecoration" href="{0}">Policy privacy modulo di contatto</a>.
